2011-05-12	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1788/cpukit
	* score/include/rtems/score/percpu.h,
	score/include/rtems/score/thread.h: Make time of last context switch
	part of per cpu information since each core has a different context
	switch to track.

2011-05-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/sys/ucred.h: Make self-contained.
	* libnetworking/nfsclient/nfsdiskless.h: Make self-contained.
	* libnetworking/nfs/nfsproto.h: Make self-contained.
	* libnetworking/resolv.h: Make self-contained.

2011-05-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* score/Makefile.am, score/include/rtems/score/isr.h: Replace tabs with
	spaces.

2011-05-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/netinet/icmp_var.h, libnetworking/netinet/if_ether.h,
	libnetworking/netinet/igmp.h, libnetworking/netinet/in_pcb.h,
	libnetworking/netinet/in_var.h, libnetworking/netinet/ip.h,
	libnetworking/netinet/ip_fw.h, libnetworking/netinet/ip_icmp.h,
	libnetworking/netinet/ip_mroute.h, libnetworking/netinet/ip_var.h,
	libnetworking/netinet/tcp.h, libnetworking/netinet/tcp_debug.h,
	libnetworking/netinet/tcpip.h, libnetworking/netinet/udp_var.h:
	Make self-contained.
	* libnetworking/net/bpf.h, libnetworking/net/if.h,
	libnetworking/net/if_ppp.h, libnetworking/net/if_pppvar.h
	libnetworking/net/if_var.h, libnetworking/net/raw_cb.h,
	libnetworking/net/slcompress.h: Make self-contained.

2011-05-11	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* score/Makefile.am, score/preinstall.am,
	score/include/rtems/score/percpu.h, score/src/percpu.c,
	score/src/threadcreateidle.c: Modifications to restrict compilation
	of SMP only code to when SMP is enabled. Entire SMP specific files
	are disabled via Makefile.am.

2011-05-11	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/include/rtems/bdbuf.h: Documentation.

2011-05-11	Sebastian Huber <sebastian.huber@embedded-brains.de>
